2008-09-30  Frederic Peters  <fpeters@0d.be>

	* Makefile.plain: fixed call to po/Makefile.plain.

2008-09-29  Marko Anastasov  <marko.anastasov@gmail.com>

	* modulesets/gnome-external-deps-2.26.modules: Fixed typo in
	fontconfig tarball URL.

2008-09-29  Christian Persch  <chpe@gnome.org>

	* modulesets/gnome-suites-2.26.modules: Restore the right branch for
	epiphany.

2008-09-28  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules: updated pixman to 0.12,
	as required by newer cairo.

2008-09-28  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules:
	* modulesets/gnome-external-deps-2.26.modules: updated cairo to stable
	release, 1.8.0.  (closes: #554139)

2008-09-27  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.24.modules:
	* modulesets/gnome-2.26.modules:
	Added desktop-switcher module from Ubuntu Netbook Remix project.

2008-09-26  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules: anjuta branched for 2.24.

2008-09-26  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules: gtk-engines branched.

2008-09-26  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules: gnome-control-center,
	gnome-desktop and gnome-settings-daemon branched for 2.24.

2008-09-24  Matthias Clasen  <mclasen@redhat.com>

	* modulesets/gnome-external-deps-2.26.modules: Sweeping update to
	current latest stable versions.

2008-09-25  Cosimo Cecchi  <cosimoc@gnome.org>

	* modulesets/gnome-suites-2.24.modules: gconf-editor branched for 2.24.

2008-09-24  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-external-deps-2.26.modules: and do the same thing
	for 2.26 ;-)

2008-09-24  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules,
	patches/opal-3.4.0-add-missing-file.patch,
	patches/opal-3.4.0-remove-makefile.patch,
	patches/opal-3.4.1-remove-makefile.patch,
	patches/ptlib-2.4.0-remove-makefile.patch,