@@ -1,5 +1,10 @@
 2008-09-30  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/frontends/tinderbox.py: use encoding-aware output files, to
+	avoid UnicodeEncodeError.  (closes: #554488)
+
+2008-09-30  Frederic Peters  <fpeters@0d.be>
+
 	* Makefile.plain: fixed call to po/Makefile.plain.
 
 2008-09-29  Marko Anastasov  <marko.anastasov@gmail.com>
